flashing when tapped animation added.  Scrolls faster when animate is set to false by default

--- a/apps/demo-angular/src/plugin-demos/ui-collectionview-sean/ui-collectionview-sean.component.html
+++ b/apps/demo-angular/src/plugin-demos/ui-collectionview-sean/ui-collectionview-sean.component.html
@@ -7,7 +7,7 @@
   </StackLayout>
     <GridLayout columns="60 1 *" rows="54 *">
       <StackLayout row="0" col="0" class="table-header" (tap)="sortTableById()">
-        <Label [text]="id"></Label>
+        <Label #idHeader class="headerLabel" [text]="id"></Label>
       </StackLayout>
       <StackLayout row="0" col="1" width="1" class="horizontal-heading-divider"></StackLayout>
 
