--- a/apps/demo-angular/src/plugin-demos/ui-collectionview-sean/ui-collectionview-sean.component.scss
+++ b/apps/demo-angular/src/plugin-demos/ui-collectionview-sean/ui-collectionview-sean.component.scss
@@ -57,3 +57,10 @@
     text-align: center;
     padding-left: 7;
 }
+
+.headerLabel {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 6;
+}
