--- a/apps/demo-angular/src/plugin-demos/ui-collectionview-sean/ui-collectionview-sean.component.scss
+++ b/apps/demo-angular/src/plugin-demos/ui-collectionview-sean/ui-collectionview-sean.component.scss
@@ -1,6 +1,11 @@
 .horizontal-heading-divider {
     width: 1;
-    background-color: rgb(203, 203, 203);
+    background-color: rgb(106, 106, 106);
+}
+
+.vertical-heading-divider {
+    height: 1;
+    background-color: rgb(106, 106, 106);  
 }
 
 .cell {
